# ORI-A.py

./: .gitmodules  .xsdata.xml  README.md  generate_docstrings.py  justfile  pyproject.toml
.github/workflows/: pytest.yml
ORI_A/: ORI_A.py  ORI_A.template.py  __init__.py  helpers.py  main.css  template.html
tests/: test_dataclass_definitions.py
